--- a/imdbClassify.ipynb
+++ b/imdbClassify.ipynb
@@ -1,37 +1,80 @@
-from keras.datasets import imdb
-(train_data, train_labels), (test_data, test_labels) = imdb.load_data(num_words=10000)
-
-max([max(sequence) for sequence in train_data])
-
-word_index = imdb.get_word_index()
-reverse_word_index = dict(
-    [(value, key) for (key, value) in word_index.items()])
-decoded_review = " ".join(
-    [reverse_word_index.get(i - 3, "?") for i in train_data[0]])
-
-import numpy as np
-def vectorize_sequences(sequences, dimension=10000):
-    results = np.zeros((len(sequences), dimension))
-    for i, sequence in enumerate(sequences):
-        for j in sequence:
-            results[i, j] = 1.
-    return results
-
-x_train = vectorize_sequences(train_data)
-x_test = vectorize_sequences(test_data)
-
-y_train = np.asarray(train_labels).astype("float32")
-y_test = np.asarray(test_labels).astype("float32")
-
-from tensorflow import keras
-from tensorflow.keras import layers
-
-model = keras.Sequential([
-    layers.Dense(16, activation="relu"),
-    layers.Dense(16, activation="relu"),
-    layers.Dense(1, activation="sigmoid")
-])
-
-model.compile(optimizer="rmsprop",
-              loss="binary_crossentropy",
-              metrics=["accuracy"])
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "imdbClassify.ipynb",
+      "provenance": [],
+      "collapsed_sections": [],
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMyG3NsORFjoRqtHLrbP5Gk",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ddemirel1/Deep-Learning-With-Python/blob/main/imdbClassify.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 22,
+      "metadata": {
+        "id": "IHiu0PuF-Whi"
+      },
+      "outputs": [],
+      "source": [
+        "from keras.datasets import imdb\n",
+        "(train_data, train_labels), (test_data, test_labels) = imdb.load_data(num_words=10000)\n",
+        "\n",
+        "max([max(sequence) for sequence in train_data])\n",
+        "\n",
+        "word_index = imdb.get_word_index()\n",
+        "reverse_word_index = dict(\n",
+        "    [(value, key) for (key, value) in word_index.items()])\n",
+        "decoded_review = \" \".join(\n",
+        "    [reverse_word_index.get(i - 3, \"?\") for i in train_data[0]])\n",
+        "\n",
+        "import numpy as np\n",
+        "def vectorize_sequences(sequences, dimension=10000):\n",
+        "    results = np.zeros((len(sequences), dimension))\n",
+        "    for i, sequence in enumerate(sequences):\n",
+        "        for j in sequence:\n",
+        "            results[i, j] = 1.\n",
+        "    return results\n",
+        "\n",
+        "x_train = vectorize_sequences(train_data)\n",
+        "x_test = vectorize_sequences(test_data)\n",
+        "\n",
+        "y_train = np.asarray(train_labels).astype(\"float32\")\n",
+        "y_test = np.asarray(test_labels).astype(\"float32\")\n",
+        "\n",
+        "from tensorflow import keras\n",
+        "from tensorflow.keras import layers\n",
+        "\n",
+        "model = keras.Sequential([\n",
+        "    layers.Dense(16, activation=\"relu\"),\n",
+        "    layers.Dense(16, activation=\"relu\"),\n",
+        "    layers.Dense(1, activation=\"sigmoid\")\n",
+        "])\n",
+        "\n",
+        "model.compile(optimizer=\"rmsprop\",\n",
+        "              loss=\"binary_crossentropy\",\n",
+        "              metrics=[\"accuracy\"])\n"
+      ]
+    }
+  ]
+}
