--- a/imdbClassify.ipynb
+++ b/imdbClassify.ipynb
@@ -6,7 +6,8 @@
       "name": "imdbClassify.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPsrIcjBob6Q4RRZeVLdmgq",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNa1ourkBe66rxRqKz3foRW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,15 +30,13 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
+        "Binary classification example using IMDB data\n"
       ],
       "metadata": {
-        "id": "yICZWL5Kb9R_"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "pq1exjU5qjwL"
+      }
     },
     {
       "cell_type": "code",
@@ -339,6 +338,17 @@
           "execution_count": 8
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Pyd8ofHNpv2q"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
