--- a/BostonHousePricesRegressionExample.ipynb
+++ b/BostonHousePricesRegressionExample.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNkQHZe8w8u2KIXaVY9ew5h",
+      "authorship_tag": "ABX9TyNd8bw+Du2ncCmapzsCyrXo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -368,33 +368,134 @@
       "cell_type": "code",
       "source": [
         "predictions = model.predict(test_data)\n",
-        "predictions[0]"
+        "predictions"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-oQUZV6RFpPX",
-        "outputId": "509ecaf2-80fe-4dae-a24f-99eb4947e837"
+        "outputId": "302e8c55-ac99-4f6a-bf60-11b6a520dbcb"
       },
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "4/4 [==============================] - 0s 3ms/step\n"
+            "4/4 [==============================] - 0s 5ms/step\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([7.2077227], dtype=float32)"
+              "array([[ 7.2077227],\n",
+              "       [19.137472 ],\n",
+              "       [22.078314 ],\n",
+              "       [32.383    ],\n",
+              "       [24.656347 ],\n",
+              "       [22.03266  ],\n",
+              "       [28.400286 ],\n",
+              "       [22.22138  ],\n",
+              "       [19.23163  ],\n",
+              "       [21.285501 ],\n",
+              "       [20.976221 ],\n",
+              "       [17.412697 ],\n",
+              "       [16.26011  ],\n",
+              "       [42.359364 ],\n",
+              "       [20.329578 ],\n",
+              "       [21.229986 ],\n",
+              "       [26.79775  ],\n",
+              "       [19.399832 ],\n",
+              "       [19.576591 ],\n",
+              "       [24.38025  ],\n",
+              "       [11.152197 ],\n",
+              "       [11.44801  ],\n",
+              "       [21.268503 ],\n",
+              "       [17.100866 ],\n",
+              "       [19.72803  ],\n",
+              "       [23.173359 ],\n",
+              "       [27.411707 ],\n",
+              "       [30.337606 ],\n",
+              "       [ 9.902935 ],\n",
+              "       [20.956293 ],\n",
+              "       [19.927198 ],\n",
+              "       [13.90385  ],\n",
+              "       [32.90165  ],\n",
+              "       [24.986727 ],\n",
+              "       [19.644094 ],\n",
+              "       [ 7.583998 ],\n",
+              "       [16.194199 ],\n",
+              "       [16.538294 ],\n",
+              "       [19.539217 ],\n",
+              "       [27.398188 ],\n",
+              "       [31.240137 ],\n",
+              "       [28.128168 ],\n",
+              "       [12.351733 ],\n",
+              "       [43.75499  ],\n",
+              "       [27.89483  ],\n",
+              "       [26.352982 ],\n",
+              "       [27.572016 ],\n",
+              "       [18.679987 ],\n",
+              "       [22.725477 ],\n",
+              "       [22.866903 ],\n",
+              "       [37.078705 ],\n",
+              "       [21.291487 ],\n",
+              "       [10.331155 ],\n",
+              "       [14.062068 ],\n",
+              "       [37.846428 ],\n",
+              "       [28.822844 ],\n",
+              "       [10.859403 ],\n",
+              "       [47.16864  ],\n",
+              "       [33.95684  ],\n",
+              "       [23.360237 ],\n",
+              "       [22.134897 ],\n",
+              "       [14.986655 ],\n",
+              "       [14.114172 ],\n",
+              "       [19.738543 ],\n",
+              "       [23.807093 ],\n",
+              "       [20.66694  ],\n",
+              "       [12.90146  ],\n",
+              "       [22.89498  ],\n",
+              "       [11.161536 ],\n",
+              "       [ 6.7586513],\n",
+              "       [23.353685 ],\n",
+              "       [31.24018  ],\n",
+              "       [27.331507 ],\n",
+              "       [11.890195 ],\n",
+              "       [26.627134 ],\n",
+              "       [19.66646  ],\n",
+              "       [20.040167 ],\n",
+              "       [24.688978 ],\n",
+              "       [36.341007 ],\n",
+              "       [ 9.697284 ],\n",
+              "       [21.943485 ],\n",
+              "       [37.632797 ],\n",
+              "       [18.292963 ],\n",
+              "       [12.349152 ],\n",
+              "       [18.778246 ],\n",
+              "       [18.0052   ],\n",
+              "       [22.511465 ],\n",
+              "       [19.279516 ],\n",
+              "       [21.144918 ],\n",
+              "       [28.877127 ],\n",
+              "       [20.703693 ],\n",
+              "       [19.646173 ],\n",
+              "       [25.73393  ],\n",
+              "       [45.233353 ],\n",
+              "       [36.729786 ],\n",
+              "       [20.186087 ],\n",
+              "       [35.57325  ],\n",
+              "       [44.030376 ],\n",
+              "       [25.799137 ],\n",
+              "       [44.63403  ],\n",
+              "       [28.806715 ],\n",
+              "       [19.790972 ]], dtype=float32)"
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 10
         }
       ]
     }
